# CellSpectralMappingAI

./: README.md  example.py  plot.py  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
.trunk/: trunk.yaml
csmai/: __init__.py  data.py  model.py
tests/: test_vae.py
