[metadata]
name = csmai
version = 0.0.0
description = A VAE model to encode multi spectral cell images
long_description = file: README.md
long_description_content_type = text/markdown
author = ...
url = https://github.com/InnocentBug/CellSpectralMappingAI
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = scipy
		 tifffile
		 torch
		 torchvision
		 torchaudio
		 tdqm
		 numpy
